--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-pandas
-matplotlib
-scikit-learn
+pandas~=2.2.3
+matplotlib~=3.10.0
+scikit-learn~=1.6.1
+protobuf
+sentencepiece
+langchain~=0.3.14
+langchain-core~=0.3.30
+transformers~=4.48.1
+textblob~=0.19.0
+seaborn~=0.13.2
+nltk~=3.9.1
+datasets~=3.2.0
+torch~=2.5.1+cu124
